@@ -174,6 +174,9 @@ Release 0.8.0 - unreleased
 
   BUG FIXES
 
+    TAJO-455: Throw PlanningException when Creating table with Partition
+    exception COLUMN. (DaeMyung Kang via hyunsik)
+
     TAJO-452: Timstamp literal with fractional seconds results in 
     java.lang.ArrayIndexOutOfBoundsException. (Keuntae Park via hyunsik)
 
